--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.19.4",
     "node-sass-chokidar": "^0.0.3",
+    "normalize.css": "^7.0.0",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "reactrangeslider": "^3.0.6",
+    "recharts": "^1.0.0-beta.6",
     "styled-components": "^2.2.4"
   },
   "scripts": {
