--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "reactrangeslider": "^3.0.6",
     "recharts": "^1.0.0-beta.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.2.4"
   },
   "scripts": {
