--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-toastify": "^3.1.2",
     "reactrangeslider": "^3.0.6",
     "recharts": "^1.0.0-beta.6",
     "redux": "^3.7.2",
